--- a/app.json
+++ b/app.json
@@ -14,12 +14,12 @@
    "addons": [
       {
          "options": {
-            "version": "12"
+            "version": "15"
          },
          "plan": "heroku-postgresql"
       }
    ],
-   "env": {
+   "env: {
       "API_ID": {
          "description": "Get this value from my.telegram.org/apps.",
          "required": true,
