--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
          "plan": "heroku-postgresql"
       }
    ],
-   "env: {
+   "env": {
       "API_ID": {
          "description": "Get this value from my.telegram.org/apps.",
          "required": true,
